fixed issues observed in api-docs while recording screencasts

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -5041,21 +5041,20 @@ Request Body:
     "locale": "en_GB",
     "clientId": 1,
     "productId": 1,
-    "principal": "100,000.00",
+    "principal": "10,000.00",
     "loanTermFrequency": 12,
     "loanTermFrequencyType": 2,
-    "loanType": "individual"
-    "numberOfRepayments": 12,
+    "loanType": "individual",
+    "numberOfRepayments": 10,
     "repaymentEvery": 1,
     "repaymentFrequencyType": 2,
-    "interestRatePerPeriod": 2,
+    "interestRatePerPeriod": 10,
     "amortizationType": 1,
     "interestType": 0,
     "interestCalculationPeriodType": 1,
     "transactionProcessingStrategyId": 1,
-    "expectedDisbursementDate": "20 September 2011",
-    "submittedOnDate": "20 September 2011",
-    "loanType": "individual"
+    "expectedDisbursementDate": "10 Jun 2013",
+    "submittedOnDate": "10 Jun 2013"
 }
 					</code>
 					<code class="method-response">
