adding support for pentaho report localization

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -13419,6 +13419,12 @@ Request Body:
 						<dd>Valid Values are HTML, XLS, CSV and PDF for html, Excel,
 							CSV and PDF formats respectively.</dd>
 						<dd>Only applies to Pentaho reports.</dd>
+						<dt>locale</dt>
+						<dd>
+							optional
+						</dd>
+						<dd>Any valid locale Ex: en_US, en_IN, fr_FR etc</dd>
+						<dd>Only applies to Pentaho reports.</dd>
 					</dl>
 					<p>Example Requests:</p>
 					<div class=apiClick>runreports/Client%20Listing?R_officeId=1</div>
