Enable datatable functionality for savings products and loan products

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -11703,6 +11703,8 @@ No Request Body:
                                     <li>m_loan</li>
                                     <li>m_office</li>
                                     <li>m_saving_account</li>
+				    <li>m_product_loan</li>
+				    <li>m_savings_product</li>
                                 </ul>
                             </td>
 						</tr>
