bug fixes for mifosx-519, 516, 361 and 362

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -15300,14 +15300,14 @@ No Request Body:
                         </dd>
                         <dt>fromDate</dt>
                         <dd>
-                            Date (yyyy-MM-dd)<span>optional</span>
+                            Date<span>optional</span>
                         </dd>
                         <dd>Filters for Journal entries whose entry Date 
                         	is greater than or equal to the passed in Date
                         </dd>
                         <dt>toDate</dt>
                         <dd>
-                            Date (yyyy-MM-dd)<span>optional</span>
+                            Date <span>optional</span>
                         </dd>
                         <dd>Filters for Journal entries whose entry Date 
                         	is lesser than or equal to the passed in Date
@@ -15322,7 +15322,7 @@ No Request Body:
 					<br>
 					<div class=apiClick>journalentries?transactionId=PB37X8Y21EQUY4S</div>
                     <br>
-                    <div class=apiClick>journalentries?officeId=1&glAccountId=17&manualEntriesOnly=true&fromDate=2012-01-01&toDate=2013-01-01</div>
+                    <div class=apiClick>journalentries?officeId=1&manualEntriesOnly=true&fromDate=1 July 2013&toDate=15 July 2013&dateFormat=dd MMMM yyyy&locale=en</div>
                     <br>
 					<div class=apiClick>journalentries?fields=officeName,glAccountName,transactionDate</div>
 					<br>
