--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -11862,7 +11862,7 @@ Content-Type: application/json
 No Request Body:
 {
 	"locale": "en", 
-	"nominalAnnualInterestRate": "5.65",
+	"nominalAnnualInterestRate": "5.9999999999",
 }
 	        </code>
 	        <code class="method-response">
@@ -12053,6 +12053,31 @@ No Request Body:
 	        </code>
 	    </div>
 	</div>
+
+	<a id="savingsaccounts_undotransaction" name="savingsaccounts_undotransaction" class="old-syle-anchor">&nbsp;</a>
+	<div class="method-section">
+	    <div class="method-description">
+	        <h2>Undo transaction</h2>
+	        <p>This command reverses the given transaction.</p>
+	    </div>
+	    <div class="method-example">
+	        <code class="method-declaration">POST https://Domain Name/api/v1/savingsaccounts/{accountsId}/transactions/{transactionId}?command=undo</code>
+	        <code class="method-request">POST savingsaccounts/1/transactions/1?command=undo              
+Content-Type: application/json
+No Request Body:
+{
+}
+	        </code>
+	        <code class="method-response">
+{
+  "officeId": 1,
+  "clientId": 2,
+  "savingsId": 1,
+  "resourceId": 1
+}
+	        </code>
+	    </div>
+	</div>	
 <!-- end of savings accounts api -->
     
 <!-- start of datatables api docs -->
@@ -17215,6 +17240,14 @@ GET https://DomainName/api/v1/search?query=000000111
 					<td></td>
 					<td>savingsaccounts/{accountId}/transactions?command=withdrawal</td>
 					<td><a href="#savingsaccounts_withdrawal">Make a withdrawal</a></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr class="alt">
+					<td></td>
+					<td>savingsaccounts/{accountId}/transactions/{transactionId}?command=undo</td>
+					<td><a href="#savingsaccounts_undotransaction">Undo transaction</a></td>
 					<td></td>
 					<td></td>
 					<td></td>
