update api docs.

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -209,10 +209,9 @@
 							</tr>
 							<tr class="alt">
 								<td></td>
-								<td>clients/{clientId}/loans</td>
+								<td>clients/{clientId}/accounts</td>
 								<td></td>
-								<td><a href="#clients_loansummary">Retrieve a Client's
-										Loan Account Summary</a></td>
+								<td><a href="#clients_loansummary">Retrieve client accounts overview</a></td>
 								<td></td>
 								<td></td>
 							</tr>
@@ -2342,7 +2341,7 @@ Request Body:
 				</div>
 				<div class="method-example">
 					<code class="method-declaration">
-GET https://DomainName/api/v1/clients/{clientId}/loans
+GET https://DomainName/api/v1/clients/{clientId}/accounts
 					</code>
 					<code class="method-response">
 {
@@ -16277,10 +16276,9 @@ GET https://DomainName/api/v1/search?query=000000111
 				</tr>
 				<tr class="alt">
 					<td></td>
-					<td>clients/{clientId}/loans</td>
+					<td>clients/{clientId}/accounts</td>
 					<td></td>
-					<td><a href="#clients_loansummary">Retrieve a Client's
-							Loan Account Summary</a></td>
+					<td><a href="#clients_loansummary">Retrieve client accounts overview</a></td>
 					<td></td>
 					<td></td>
 				</tr>
